mise a jour actualite

--- a/public/backend/css/main.css
+++ b/public/backend/css/main.css
@@ -135,3 +135,11 @@ strong {
     bottom: 101%;
     left: 20%;
 }
+
+div.vich-image  a  img {
+    width: 100% !important;
+}
+
+#actualite_actif {
+    font-size: 10px;
+}
