--- a/templates/back_end/actualite/actualite_show.html.twig
+++ b/templates/back_end/actualite/actualite_show.html.twig
@@ -40,6 +40,11 @@
             </table>
         </div> 
     </div>
+    <ul class="sticky-toolbar">
+        <li class="toolbar-items">
+            <a href="{{path('add_actualite')}}" class="btn btn-primary"><i class="fas fa-plus-circle"></i> </a>
+        </li>
+    </ul>
 
 {% endblock %}
 
