--- a/templates/back_end/actualite/page_divers_edit.html.twig
+++ b/templates/back_end/actualite/page_divers_edit.html.twig
@@ -5,5 +5,67 @@
 {% endblock %}
 
 {% block contenu %}
-{{ form(form)}}
+    {{ form_start(form)}}
+
+    <div class="row">
+        <h5 class=" m-auto col-8"><i class="fa fa-globe"></i>  {% if app.request.attributes.get('_route') == 'edit_actualite' %} Modification d'une actualitée {% else %} Ajout d'une actualitée {% endif %}   </h5>
+        <div class="col-4 text-right pr-5">
+            <a href="{{path('show_page_divers')}}" class="btn btn-retour"><i class="fas fa-chevron-left"></i> Retour </a>
+            <button type="submit" class="btn btn-enregistrer"><i class="fas fa-save"></i> Enregistrer </a>
+        </div>
+    </div>
+
+    <div class="row justify-content-center mt-5">
+        <div class="col-10 text-center">    
+                    
+                <div class="row form-group text-right">
+                    {{ form_label(form.titre, 'Titre de la page', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                    <div class="input-group col-sm-10">
+                        {{ form_widget(form.titre) }}
+                    </div>
+                </div>
+                {% for type in form.meta %}
+                <div class="row form-group text-right">
+                {{ form_label(type, null , {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                    <div class="input-group col-sm-10">
+                        {{ form_widget(type) }}
+                    </div>
+                </div>
+                {% endfor %}
+                <div class="row form-group text-right mb-5">
+                    {{ form_label(form.slug, 'Url simplifiée de la page', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                    <div class="input-group col-sm-10">
+                        {{ form_widget(form.slug) }}
+                    </div>
+                </div>
+                <div class="row form-group text-right">
+                    {{ form_label(form.actif, 'Statut', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                    <div class="input-group col-sm-1">
+                        {{ form_widget(form.actif) }}
+                    </div>
+                </div>
+                <div class="row form-group text-right">
+                    {{ form_label(form.imageFile, 'Ajout / changement d\'image', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                    <div class="input-group col-sm-10">
+                        {{ form_widget(form.imageFile) }}
+                    </div>
+                </div>
+                <div class="row form-group text-right mb-5">
+                    {{ form_label(form.contenu, 'Contenu de la page', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                    <div class="input-group col-sm-10">
+                        {{ form_widget(form.contenu) }}
+                    </div>
+                </div>
+                <ul class="sticky-toolbar">
+                    <li class="toolbar-items">
+                        <a href="{{path('liste_zone')}}" class="btn btn-retour"><i class="fas fa-chevron-left"></i> </a>
+            
+                    </li>
+                    <li class="toolbar-items">
+                        <button type="submit" class="btn btn-enregistrer"><i class="fas fa-save"></i> </a>
+                    </li>
+                </ul>
+            {{ form_end(form, {'render_rest': false})}}
+        </div>
+    </div>
 {% endblock %}
