--- a/templates/back_end/actualite/page_divers_show.html.twig
+++ b/templates/back_end/actualite/page_divers_show.html.twig
@@ -19,9 +19,13 @@
                 <thead>
 
                     <tr>
-                        <th data-field="id" data-sortable="true"> Id </th>
                         <th data-field="titre" data-sortable="true"> Titre </th>
-                        <th data-field="actif" data-formatter="booleanFormatter" data-align="center" data-sortable="true">Actif</th>
+                        <th data-field="meta.titre" data-sortable="true"> Titre Balise HTML </th>
+                        <th data-field="meta.metaDescription" data-align="center" data-sortable="true">Description Balise HTML</th>
+                        <th data-field="actif" data-formatter="booleanFormatter" data-sortable="true"> Active </th>
+                        <th data-field="slug" data-sortable="true"> URL simplifiée </th>
+                        <th data-field="dateCreation.timestamp" data-formatter="dateFormatter" data-sortable="true"> Date de création </th>
+                        <th data-field="dateModification.timestamp" data-formatter="dateFormatter" data-sortable="true"> Date de modification </th>
                         <th data-field="edit" data-formatter="actionsFormatter"> Editer </th>
                     </tr>
 
@@ -29,7 +33,11 @@
             </table>
         </div> 
     </div>
-
+    <ul class="sticky-toolbar">
+        <li class="toolbar-items">
+            <a href="{{path('add_page_divers')}}" class="btn btn-primary"><i class="fas fa-plus-circle"></i> </a>
+        </li>
+    </ul>
 {% endblock %}
 
 {% block javascripts %}
@@ -42,41 +50,20 @@
                     '<a href="'+Routing.generate('del_page_divers', {'id' : row.id})+'" title="Supprimer"><i class="fas fa-trash"></i></a>';
         }
 
-        var $table = $('#table')
-        var $button = $('select')
-
-        $(function() {
-            $button.change(function () {
-                $( "select option:selected" ).each(function() {
-                    $table.bootstrapTable('filterBy', {
-                        typeDuree: $( this ).val()
-                    })
-                    console.log($( this ).val())
-                });
-                
-            })
-        })
+        
         
         function booleanFormatter(value, row, index) {
             if (value === true) {
-                return '<i class="fa fa-check text-success text-center"></i>';
+                return '<i class="fas fa-check text-success text-center"></i>';
             }
             else {
-                return '<i class="fa fa-times text-danger text-center"></i>';
+                return '<i class="fas fa-times text-danger text-center"></i>';
             }
         }
 
-        function visaFormatter(value, row, index) {
-            if(row["visaClassic"]) {
-                return '<strong> Visa classic </strong>';
-            }
-            else if(row["evisa"]) {
-                return '<strong> E visa </strong';
-            }
-            else if(row["carteTourisme"]) {
-                return '<strong>Carte de tourisme</strong>';
-            }
-            return 'Aucun visa n\'est selectionner';
+        function dateFormatter(value, row, index) {
+            var date = new Date(value*1000);
+            return `${date.getDate()}/${date.getMonth() + 1}/${date.getFullYear()} à ${date.getHours()}h${date.getMinutes()}`;
         }
         
     </script>
