--- a/templates/back_end/client/show_client.html.twig
+++ b/templates/back_end/client/show_client.html.twig
@@ -25,7 +25,7 @@
                         <th data-field="prenom" data-sortable="true">Prenom</th>
                         <th data-field="valide" data-formatter="booleanFormatter" data-align="center" data-sortable="true">Actif</th>
                         <th data-field="premium" data-formatter="booleanFormatter" data-align="center" data-sortable="true">Premium</th>
-                        <th data-field="roles" data-formatter="rolesFormatter" data-filter-control="select" data-sortable="true">Profil</th>
+                        <th data-field="roles" data-formatter="rolesFormatter" data-filter-control="select" data-sortable="true" class="profil">Profil</th>
                         <th data-field="dateCreation.timestamp" data-formatter="dateFormatter" data-sortable="true">Date de création</th>
                         <th data-field="dateModif.timestamp" data-formatter="dateFormatter" data-sortable="true">Date de modification</th>
                         <th data-field="edit" data-formatter="actionsFormatter">Editer</th>
