--- a/templates/back_end/faq/categories_edit.html.twig
+++ b/templates/back_end/faq/categories_edit.html.twig
@@ -5,5 +5,35 @@
 {% endblock %}
 
 {% block contenu %}
-{{ form(form)}}
+<div class="row">
+    <h5 class=" m-auto col-8"><i class="fa fa-users-cog"></i> Modification d'une catégorie </h5>
+    <div class="col-4 text-right pr-5">
+        <a href="{{path('show_categories_faq')}}" class="btn btn-retour"><i class="fas fa-chevron-left"></i> Retour </a>
+        <button type="submit" class="btn btn-enregistrer"><i class="fas fa-save"></i> Enregistrer </a>
+    </div>
+</div>
+
+<div class="row justify-content-center mt-5">
+    <div class="col-10 text-center">
+        
+            <div class="row form-group text-right">
+                {{ form_label(form.titre, 'Titre de la catégorie', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                <div class="input-group col-sm-10">
+                    {{ form_widget(form.titre) }}
+                </div>
+            </div>
+            
+            
+            <ul class="sticky-toolbar">
+                <li class="toolbar-items">
+                    <a href="{{path('show_categories_faq')}}" class="btn btn-retour"><i class="fas fa-chevron-left"></i> </a>
+        
+                </li>
+                <li class="toolbar-items">
+                    <button type="submit" class="btn btn-enregistrer"><i class="fas fa-save"></i> </a>
+                </li>
+            </ul>
+        {{ form_end(form, {'render_rest': false})}}
+    </div>
+</div>
 {% endblock %}
