--- a/templates/back_end/note_de_course/note_de_course_show.html.twig
+++ b/templates/back_end/note_de_course/note_de_course_show.html.twig
@@ -39,6 +39,11 @@
             </table>
         </div> 
     </div>
+    <ul class="sticky-toolbar">
+        <li class="toolbar-items">
+            <a href="{{path('add_course')}}" class="btn btn-primary"><i class="fas fa-plus-circle"></i> </a>
+        </li>
+    </ul>
 
 {% endblock %}
 
