--- a/templates/back_end/evisa/categorie/categorie_evisa_show.html.twig
+++ b/templates/back_end/evisa/categorie/categorie_evisa_show.html.twig
@@ -3,7 +3,10 @@
 {% block contenu %}
 
     <div class="row">
-        <h5 class=" m-auto col-8"><i class="fa fa-users-cog"></i>Liste des catégories visa - Evisa / {{ evisa.pays.titre }}</h5>
+        <h5 class=" m-auto col-5"><i class="fa fa-users-cog"></i>Liste des catégories visa - Evisa / {{ evisa.pays.titre }}</h5>
+        <div class="col-7 text-right pr-5">
+            <a href="{{path('show_pays_evisa')}}" class="btn btn-retour"><i class="fas fa-chevron-left"></i> Retour à la liste des pays </a>
+        </div>
     </div>
 
     <div class="row">
@@ -18,7 +21,11 @@
             </table>
         </div> 
     </div>
-
+    <ul class="sticky-toolbar">
+        <li class="toolbar-items">
+            <a href="{{path('show_pays_evisa')}}" class="btn btn-retour"><i class="fas fa-chevron-left"></i> </a>
+        </li>
+    </ul>
 {% endblock %}
 
 {% block javascripts %}
