--- a/templates/back_end/evisa/demandes/edit_voyageurs.html.twig
+++ b/templates/back_end/evisa/demandes/edit_voyageurs.html.twig
@@ -7,14 +7,49 @@
  </style>
         
 <div class="row">
-    <h5 class=" m-auto col-8"><i class="fa fa-users-cog"></i>Réception dossier</h5>
+    <h5 class=" m-auto col-8"><i class="fa fa-users-cog"></i>Infos voyageurs</h5>
 </div>
 
-<div class="row">
-    <div class="col-12">
+<div class="row justify-content-center mt-5">
+    <div class="col-10 text-center">    
         {{ form_start(form, {'action': path('edit_voyageur_evisa', {'id': id}), 'method': 'POST'}) }}
-            {{ form(form) }}
-        {{ form_end(form)}}
-    </div> 
+            <div class="row form-group text-right">
+                {{ form_label(form.nom, 'Nom', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                <div class="input-group col-sm-10">
+                    {{ form_widget(form.nom) }}
+                </div>
+            </div>
+            <div class="row form-group text-right mb-5">
+                {{ form_label(form.prenom, 'Prénom', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                <div class="input-group col-sm-10">
+                    {{ form_widget(form.prenom) }}
+                </div>
+            </div>
+            <div class="row form-group text-right">
+                {{ form_label(form.sexe, 'Sexe', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                <div class="input-group col-sm-10">
+                    {{ form_widget(form.sexe) }}
+                </div>
+            </div>
+            <div class="row form-group text-right">
+                {{ form_label(form.nationalite, 'Nationalité', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                <div class="input-group col-sm-10">
+                    {{ form_widget(form.nationalite) }}
+                </div>
+            </div>
+            <div class="row form-group text-right">
+                {{ form_label(form.dateNaissance, 'Date de naissance', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                <div class="input-group col-sm-10">
+                    {{ form_widget(form.dateNaissance) }}
+                </div>
+            </div>
+            <div class="row form-group text-right">
+                {{ form_label(form.numeroPasseport, 'Numéro de passeport', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                <div class="input-group col-sm-10">
+                    {{ form_widget(form.numeroPasseport) }}
+                </div>
+            </div>
+        {{ form_end(form, {'render_rest': false})}}
+    </div>
 </div>
     
