--- a/templates/back_end/evisa/type_evisa_show.html.twig
+++ b/templates/back_end/evisa/type_evisa_show.html.twig
@@ -4,8 +4,9 @@
 {% block contenu %}
 
     <div class="row">
-        <h5 class=" m-auto col-8"><i class="fa fa-users-cog"></i> Liste des visas - Visas classiques / {{ eVisa.pays.titre }}</h5>
-        <div class="col-3 float-right">
+        <h5 class=" m-auto col-5"><i class="fa fa-users-cog"></i> Liste des visas - Visas classiques / {{ eVisa.pays.titre }}</h5>
+        <div class="col-7 text-right pr-5">
+            <a href="{{path('show_pays_evisa')}}" class="btn btn-retour"><i class="fas fa-chevron-left"></i> Retour à la liste des pays </a>
             <a href="{{path('add_type_evisa', {id: eVisa.id } )}}" class="btn btn-primary petite-taille"><i class="fas fa-plus-circle"></i> Ajouter un type de visa </a>
         </div>
     </div>
@@ -19,14 +20,18 @@
                         <th data-field="titre" data-sortable="true">Visa</th>
                         <th data-field="typeEntre" data-sortable="true">Type entrée</th>
                         <th data-field="dureSejour" data-sortable="true">Durée séjour</th>
-                        <th data-field="valide" data-formatter="booleanFormatter" data-align="center" data-sortable="true">Visible sur le site ?</th>
+                        <th data-field="active" data-formatter="booleanFormatter" data-align="center" data-sortable="true">Visible sur le site ?</th>
                         <th data-field="edit" data-formatter="actionsFormatter">Editer</th>
                     </tr>
                 </thead>
             </table>
         </div> 
     </div>
-
+    <ul class="sticky-toolbar">
+        <li class="toolbar-items">
+            <a href="{{path('add_type_evisa', {id: eVisa.id } )}}" class="btn btn-primary"><i class="fas fa-plus-circle"></i> </a>
+        </li>
+    </ul>
 {% endblock %}
 
 {% block javascripts %}
@@ -40,10 +45,10 @@
 
         function booleanFormatter(value, row, index) {
             if (value === true) {
-                return '<i class="fa fa-check text-success text-center"></i>';
+                return '<i class="fas fa-check text-success text-center"></i>';
             }
             else {
-                return '<i class="fa fa-times text-danger text-center"></i>';
+                return '<i class="fas fa-times text-danger text-center"></i>';
             }
         }
 
